--- a/radio-operator-toolbox-angular/src/app/pages/reports-page/reports-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/reports-page/reports-page.component.html
@@ -1,9 +1,11 @@
-<!-- <div class="d-flex">
+<div class="d-flex">
     <div class="tile">
         <app-menu-tile [name]="'MEDEVAC'" [routerLink]="[ '/sarneg-tab']" [isLabelShowed]="true"></app-menu-tile>
     </div>
     <div class="tile">
         <app-menu-tile [name]="'SALUTE'" [routerLink]="[ '/sarneg-tab']" [isLabelShowed]="true"></app-menu-tile>
     </div>
-</div> -->
-<p>worksssssssssssssss</p>
+    <div class="tile">
+        <app-menu-tile [name]="'SALTR'" [routerLink]="[ '/sarneg-tab']" [isLabelShowed]="true"></app-menu-tile>
+    </div>
+</div>
