--- a/radio-operator-toolbox-angular/src/app/pages/tdr-data-page/tdr-data-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/tdr-data-page/tdr-data-page.component.html
@@ -1,14 +1,28 @@
 <p>tdrsettings-page works!</p>
-<p>my name/nickname</p>
+gwiazdka ze ulubione
+<i class="fas fa-star    "></i>
+<i class="fas fa-star    "></i>
+<i class="fas fa-star-and-crescent    "></i>
+<i class="fas fa-star-and-crescent    "></i>
+<i class="fas fa-star-half    "></i>
+<i class="fa-regular fa-star"></i>
+<i class="fa-solid fa-star"></i>
+<i class="fa fa-star-o" aria-hidden="true"></i>
+<i class="fa fa-star" aria-hidden="true"></i>
+<i class="fas fa-star-o" aria-hidden="true"></i>
+<i class="fab fa-star-o" aria-hidden="true"></i>
+
+
+<p>my name/codename</p>
 <p>312klp/DUSIGROSZ-02</p>
 
 
 
-<p>my leader name/nickname</p>
+<p>my leader name/codename</p>
 <p>3121plp/PASIBRZUCH-01</p>
 
 
-<p>other teams names/nicknames</p>
+<p>other teams names/codenames</p>
 <p>3121plp/ROZPUSTNIK-03</p>
 <p>3121plp/GWIAZDOREK-04</p>
 <p>3121plp/PODBIERACZ-05</p>
