--- a/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
@@ -1,26 +1,26 @@
 <div class="d-flex">
     <div class="tile">
+        <app-menu-tile [name]="'Kodowanie'" [routerLink]="[ '/xxxsarneg-tab']" [isLabelShowed]="true"></app-menu-tile>
+    </div>
+    <div class="tile">
         <app-menu-tile [name]="'sarneg'" [routerLink]="[ '/sarneg-tab']"></app-menu-tile>
     </div>
     <div class="tile">
         <app-menu-tile [name]="'vigenere'" [routerLink]="[ '/vigenere-tab']"></app-menu-tile>
     </div>
-    <div class="tile">
-        <app-menu-tile [name]="'reports'" [routerLink]="[ '/reports-page']"></app-menu-tile>
-    </div>
 </div>
 
 
 <div class="d-flex">
+    <div class="tile">
+        <app-menu-tile [name]="'Raporty'" [iconName]="'reports'"  [routerLink]="[ '/reports-page']"></app-menu-tile>
+    </div>
     <div class="tile">
         <app-menu-tile [name]="'ksiazka korespondencji'" [routerLink]="[ '/correspondence-book-page']"
             [isLabelShowed]="true"></app-menu-tile>
     </div>
     <div class="tile">
-        <app-menu-tile [name]="'import export z TDR'" [routerLink]="[ '/tdr-data-page']" [isLabelShowed]="true"></app-menu-tile>
-    </div>
-    <div class="tile">
-        <app-menu-tile [name]="'Sciągawka'" [routerLink]="[ '/cheatsheet-page']" [isLabelShowed]="true"></app-menu-tile>
+        <app-menu-tile [name]="'TDR'" [routerLink]="[ '/tdr-data-page']" [isLabelShowed]="true"></app-menu-tile>
     </div>
 </div>
 
@@ -28,12 +28,13 @@
 
 <div class="d-flex">
     <div class="tile">
-        <app-menu-tile [name]="'Notepad'" [routerLink]="[ '/notepad-page']" [isLabelShowed]="true"></app-menu-tile>
+        <app-menu-tile [name]="'Sciągawka'" [routerLink]="[ '/cheatsheet-page']" [isLabelShowed]="true"></app-menu-tile>
+    </div>
+    <div class="tile">
+        <app-menu-tile [name]="'Notatnik'" [routerLink]="[ '/notepad-page']" [isLabelShowed]="true"></app-menu-tile>
     </div>
     <div class="tile">
         <app-menu-tile [name]="'Ustawienia wszelakie'" [routerLink]="[ '/settings-page']"
             [isLabelShowed]="true"></app-menu-tile>
     </div>
 </div>
-
-
