--- a/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex">
     <div class="tile">
-        <app-menu-tile [name]="'Kodowanie'" [routerLink]="[ '/xxxsarneg-tab']" [isLabelShowed]="true"></app-menu-tile>
+        <app-menu-tile [name]="'Kodowanie'" [routerLink]="[ '/encodings-tab']" [isLabelShowed]="true"></app-menu-tile>
     </div>
     <div class="tile">
         <app-menu-tile [name]="'sarneg'" [routerLink]="[ '/sarneg-tab']"></app-menu-tile>
