--- a/radio-operator-toolbox-angular/src/app/pages/notepad-page/notepad-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/notepad-page/notepad-page.component.html
@@ -1,23 +1,26 @@
-<div>
-    <app-notepad-navbar
-    (prevPage)="prevPage()"
-    (addPage)="addPage()"
-    (removePage)="removePage()"
-    (nextPage)="nextPage()"
-    ></app-notepad-navbar>
-</div>
-
-
-<div class="form-group">
-    <label for="exampleFormControlTextarea1"> Quick notepad, page: {{currentPage.pageNo}} / {{pages.length}}</label>
-    <textarea [(ngModel)]="currentPage.pageContent" class="form-control" id="exampleFormControlTextarea1" rows="15"></textarea> 
-</div>
-
-<div>
-    <app-notepad-navbar
-    (prevPage)="prevPage()"
-    (addPage)="addPage()"
-    (removePage)="removePage()"
-    (nextPage)="nextPage()"
-    ></app-notepad-navbar>
+<div class="m-2">
+    <div>
+        <app-notepad-navbar
+        (prevPage)="prevPage()"
+        (addPage)="addPage()"
+        (removePage)="removePage()"
+        (nextPage)="nextPage()"
+        ></app-notepad-navbar>
+    </div>
+    
+    
+    <div class="form-group text-center my-2">
+        <label for="exampleFormControlTextarea1"> Quick notepad, page: {{currentPage.pageNo}} / {{pages.length}}</label>
+        <textarea [(ngModel)]="currentPage.pageContent" class="form-control" id="exampleFormControlTextarea1" rows="15"></textarea> 
+    </div>
+    
+    <div>
+        <app-notepad-navbar
+        (prevPage)="prevPage()"
+        (addPage)="addPage()"
+        (removePage)="removePage()"
+        (nextPage)="nextPage()"
+        ></app-notepad-navbar>
+    </div>
+    
 </div>
