--- a/radio-operator-toolbox-angular/src/app/pages/reports-page/reports-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/reports-page/reports-page.component.html
@@ -1,11 +1,7 @@
 <div class="d-flex">
-    <div class="tile">
-        <app-menu-tile [name]="'MEDEVAC'" [routerLink]="[ '/sarneg-tab']" [isLabelShowed]="true"></app-menu-tile>
-    </div>
-    <div class="tile">
-        <app-menu-tile [name]="'SALUTE'" [routerLink]="[ '/sarneg-tab']" [isLabelShowed]="true"></app-menu-tile>
-    </div>
-    <div class="tile">
-        <app-menu-tile [name]="'SALTR'" [routerLink]="[ '/sarneg-tab']" [isLabelShowed]="true"></app-menu-tile>
+    <div *ngFor="let item of reports" class="tile">
+        <app-menu-tile [name]="item.name" [routerLink]="[ '/report-tab']" [isLabelShowed]="true"
+            (click)="setCurrentReport(item)"></app-menu-tile>
     </div>
 </div>
+
