--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
@@ -1,6 +1,7 @@
 
 <div ><b>IN PROGRESS</b></div>
 
+szukajka
 <div>
     <div *ngFor="let line of correspondenceBook" class="input-group input-group-sm mb-3">
 
