--- a/radio-operator-toolbox-angular/src/styles.scss
+++ b/radio-operator-toolbox-angular/src/styles.scss
@@ -80,6 +80,18 @@ select {
     color: green;
 }
 
+.w-90{
+    width: 90%;
+}
+
+.w-3em{
+    width: 3em;
+}
+
+.w-2em{
+    width: 2em;
+}
+
 @font-face {
     font-family: 'JetBrainsMono-Medium';
     src: url('./assets/fonts/JetBrainsMono-Medium.ttf');
