--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -126,6 +126,7 @@
     </div>
 </ng-template>
 
-<ng-template #clearAllModal let-modal>
-    <app-modal-generic (modalResult)="closeClearAllModal($event)"></app-modal-generic>
-</ng-template>
+<!-- <app-modal-generic [title]="'aa'" [content]="'content'"        (modalResult)="closeClearAllModal($event)"></app-modal-generic> -->
+<!-- <ng-template #clearAllModal let-modal>
+        <app-modal-generic></app-modal-generic>
+</ng-template> -->
