--- a/radio-operator-toolbox-angular/src/app/pages/encodings-page/encodings-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/encodings-page/encodings-page.component.html
@@ -3,7 +3,13 @@
         <app-menu-tile [name]="'sarneg'" [routerLink]="[ '/sarneg-tab']"></app-menu-tile>
     </div>
     <div class="tile">
+        <app-menu-tile [name]="'VIC'" [routerLink]="[ '/vic-tab']" [isLabelShowed]="true"></app-menu-tile>
+    </div>
+    <div class="tile">
         <app-menu-tile [name]="'vigenere'" [routerLink]="[ '/vigenere-tab']"></app-menu-tile>
     </div>
+    <div class="tile">
+        <app-menu-tile [name]="'Szachownica Polibiusza'" [routerLink]="[ '/polybius-tab']"
+            [isLabelShowed]="true"></app-menu-tile>
+    </div>
 </div>
-
