--- a/radio-operator-toolbox-angular/src/app/pages/cheatsheet-page/cheatsheet-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/cheatsheet-page/cheatsheet-page.component.html
@@ -1,3 +1,4 @@
+<p>dlugosc fali: lambda=c/f</p>
 <div class="my-2">
     <div *ngFor="let wave of wavesFreqsLengthsPairs, index as idx" class="input-group mb-1">
         <span class="input-group-text px-1  text-center">f{{idx}} [MHz]</span>
@@ -6,20 +7,14 @@
         <span class="input-group-text ps-2 px-2  text-center">½ λ{{idx}} [m]</span>
         <input [(ngModel)]="wave.length" type="number" class="form-control text-center" placeholder="½ λ [m]" (change)="updateFreq(wave)"
             value="{{wave.length}}">
-            <button type="button" class="btn btn-primary m-0" (click)="update(wave)">
-                <i class="fa faslid fa-arrows-rotate"></i>
-                <i class="fa-solid fa-rotate"></i>
-            </button>
     </div>
 </div>
 
 
-<p>cheatsheet works!</p>
 <p></p>
 <p>paramtery RRC</p>
 <p></p>
 <p>wzory:</p>
 <p>horyzont radiowy</p>
-<p>dlugosc antenty lambda=c/f</p>
 <p></p>
 <p>alfapbet NATO</p>
