--- a/radio-operator-toolbox-angular/src/app/pages/tdr-data-page/tdr-data-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/tdr-data-page/tdr-data-page.component.html
@@ -39,6 +39,7 @@
 <br>
 <hr>
 <p>sciezki do opcji w RRC: GPS,KODEK,ALERT,AUTH itp</p>
+<p> alerty</p>
 <p> SARNEG PARZYSTE</p>
 <p> SARNEG NIEPARZYSTE</p>
 <p> import TDR from json/txt</p>
