--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.scss
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.scss
@@ -1,3 +1,11 @@
 .line-header{
     width: 8em;
 }
+
+.incoming{
+    background-color: lightblue;
+}
+
+.outgoing{
+    background-color: lightyellow;
+}
