--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
@@ -5,7 +5,7 @@
     <div *ngIf="line.transmitDirection===transmitDirections.INCOMING" class="col-1"></div>
 
 
-    <div class="card">
+    <div class="card w-100">
         <div class="card-body p-0">
             <h6 class="card-title p-1 m-0 text-muted header d-flex flex-row justify-content-between">
                 <small class="">{{getTimeDTG(line.timestamp)}}</small>
