--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/quick-data-modal/quick-data.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/quick-data-modal/quick-data.component.html
@@ -1,7 +1,14 @@
-<div>
-    <div *ngFor="let item of quickData" class="mb-1">{{item.key}}:<br><code>{{item.value}}</code>
-        <button type="button" class="btn btn-primary btn-sm ms-2" [cdkCopyToClipboard]="item.value">
-            <i class="fas fa-copy "></i>
-        </button>
+<div *ngFor="let item of quickData" class="mb-1 ">
+    {{item.key}}:<br>
+    <div class="input-group mb-3 d-flex">
+        <div class="input-group-text d-flex justify-content-center w-80" id="basic-addon11">{{item.value}}</div>
+        <button class="input-group-text btn btn-outline-primary m-0 w-20" type="button" [cdkCopyToClipboard]="item.value"><i
+                class="fas fa-copy "></i></button>
     </div>
 </div>
+
+<!-- <div *ngFor="let item of quickData" class="mb-1">{{item.key}}:<br><code>{{item.value}}</code>
+    <button type="button" class="btn btn-primary btn-sm ms-2" [cdkCopyToClipboard]="item.value">
+        <i class="fas fa-copy "></i>
+    </button>
+</div> -->
