--- a/radio-operator-toolbox-angular/src/styles.scss
+++ b/radio-operator-toolbox-angular/src/styles.scss
@@ -84,6 +84,18 @@ select {
     width: 90%;
 }
 
+.w-80{
+    width: 80%;
+}
+
+.w-10{
+    width: 10%;
+}
+
+.w-20{
+    width: 20%;
+}
+
 
 .w-2em{
     width: 2em;
