--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.scss
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.scss
@@ -12,6 +12,11 @@
     border-radius: 0px 0px 5px 5px;
 }
 
+.bypassing{
+    background-color: lightgreen;
+    border-radius: 0px 0px 5px 5px;
+}
+
 .header{
     border-bottom: 1px solid black;
     border-radius: 5px 5px 0px 0px ;
