--- a/radio-operator-toolbox-angular/src/app/pages/reports-page/report-tab/report-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/reports-page/report-tab/report-tab.component.html
@@ -98,7 +98,7 @@
 
                     <!-- DTG -->
                     <div *ngIf="lineValue.valueType === lineValueTypes.DTG">
-                        <button type="button" class="btn btn-primary mx-1" (click)="getDTG(lineValue)">
+                        <button type="button" class="btn btn-primary mx-1" (click)="getTimeDTG(lineValue)">
                             <i class="fa fa-calendar" aria-hidden="true"></i>
                         </button>
                     </div>
