--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
@@ -48,7 +48,7 @@
                     <!-- <div class="input-group-text"> -->
                     <input [(ngModel)]="newEntryDTG" type="text" class="form-control" placeholder="Recipient's username"
                         aria-label="Recipient's username" aria-describedby="basic-addon2">
-                    <button class="btn btn-primary m-0 w-2em" type="button" (click)="getTimeDTG()">
+                    <button class="btn btn-primary m-0 w-2em" type="button">
                         <i class="fa fa-calendar" aria-hidden="true"></i>
                     </button>
 
